crates/cherry-pit-core/tests/compile_fail/aggregate_id_no_from_u64.stderr
error[E0277]: the trait bound `AggregateId: From<u64>` is not satisfied
 --> tests/compile_fail/aggregate_id_no_from_u64.rs:6:28
  |
6 |     let _id: AggregateId = AggregateId::from(5_u64);
  |                            ^^^^^^^^^^^ the trait `From<u64>` is not implemented for `AggregateId`
  |
help: the trait `From<u64>` is not implemented for `AggregateId`
      but trait `From<NonZero<u64>>` is implemented for it
 --> src/aggregate_id.rs
  |
  | impl From<NonZeroU64> for AggregateId {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: for that trait implementation, expected `NonZero<u64>`, found `u64`
